##Text encoding: utf-8

2008-11-14  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/Makefile.am: add hash.*.
	* libs/gccv/hash.cc: new item for "hash" bonds.
	* libs/gccv/hash.h: ditto.
	* libs/gccv/line.cc: fixed bounds.
	* libs/gccv/wedge.cc: implemnted Wedge::Distanc().
	* libs/gccv/wedge.h: made some members protected instead of private.
	* libs/gcp/bond.cc: reimplement more bond types.
	* libs/gcp/view.cc: increase the canvas gap to 3 to ease selection.
	* libs/gcu/spectrumview.cc: on_max_changed calls OnMaxChanged.
	* plugins/paint/bonds/bondtool.cc: reimplement more bond types.

2008-11-12  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcu/spectrumdoc.cc: enhance data loading [#24719] and always
	update the invert axis check box.
	* plugins/paint/bonds/bondtool.h: removed a commented out member.

2008-11-11  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/document.cc: delete previous version when saving.
	* libs/gcu/object.cc: remove objects from dirty objects list when
	destroying.
	* plugins/paint/bonds/chaintool.cc: fixed when the chain starts from a
	new atom.
	* plugins/paint/cycles/cycletool.cc: reimplemented.
	* programs/crystal/document.cc: delete previous version when saving.

2008-11-10  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/bond.cc: prefer a cycle with cis configuration when drawing
	double bonds. [#24802]

2008-11-10  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/paint/cycles/cycletool.cc: partially reimplemented.
	* plugins/paint/cycles/cycletool.h: ditto.

2008-11-09  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/paint/bonds/bondtool.cc: don't allow bonds between molecules not
	in the same group.
	* plugins/paint/bonds/chaintool.cc: ditto.

2008-11-08  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/structs.h: add Point struct.
	* libs/gcp/view.cc: fixed objects remove.
	* plugins/paint/bonds/bondtool.cc: removed unused local variables.