@@ -1,5 +1,10 @@
 ##Text encoding: utf-8
 
+2008-11-14  Jordan Mantha  <laserjock@ubuntu.com>
+	* libs/gcu/spectrumview.cc: implement y-axis adjustment
+	* libs/gcu/spectrumview.h: ditto
+	* libs/gcu/spectrumdoc.cc: ditto
+
 2008-11-14  Jean Bréfort  <jean.brefort@normalesup.org>
 	* libs/gccv/Makefile.am: add hash.*.
 	* libs/gccv/hash.cc: new item for "hash" bonds.
